Improve buckets explanations

--- a/index.html
+++ b/index.html
@@ -961,8 +961,17 @@ histogram.getValueAtPercentile(50);   // <span class="firstDemoMedian">NA</span>
 						<td class="fragment fade-right" data-fragment-index="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 						<td class="fragment fade-right" data-fragment-index="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 						<td class="fragment fade-right" data-fragment-index="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+						<td class="fragment fade-right" data-fragment-index="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 						
 
+					</tr>
+
+					<tr class="fragment fade-up" data-fragment-index="3">
+						<td colspan="4">Bucket 1</td>
+						<td colspan="4">Bucket 2</td>
+						<td colspan="4">Bucket 3</td>
+						<td colspan="4">Bucket 4</td>
+					
 					</tr>
 				</table>
 	
