--- a/index.html
+++ b/index.html
@@ -950,18 +950,18 @@ histogram.getValueAtPercentile(50);   // <span class="firstDemoMedian">NA</span>
 </section>
 
 <section data-transition="fade">
-	<h1>123</h1>
+	<h1>124</h1>
 </section>
 				
 <section data-transition="fade">
-	<h1>124</h1>
+	<h1>123</h1>
 </section>
 
 <section data-transition="fade">
 	<h1>123 000</h1>
 </section>
 <section data-transition="fade">
-	<h1>123 999</h1>
+	<h1>123 001</h1>
 </section>
 <section data-transition="fade">
 	<h1>123 042</h1>
@@ -1090,6 +1090,40 @@ for (int i = 0; i < nbLoop; i++) {
 	montrer graph avec les discontinuités
 </aside>
 </section>
+
+<section>
+    <img src="schema-co-1.png" class="stretch no_border_img" />
+</section>
+<section>
+    <img src="schema-co-2.png" class="stretch no_border_img" />
+</section>
+<section>
+    <img src="schema-co-3.png" class="stretch no_border_img" />
+</section>
+<section>
+    <img src="schema-co-4.png" class="stretch no_border_img" />
+</section>
+<section>
+    <img src="schema-co-5.png" class="stretch no_border_img" />
+</section>
+	
+	
+<section>
+    <img src="co-schema-sleep-1.png" class="stretch no_border_img" />
+</section>
+<section>
+    <img src="co-schema-sleep-2.png" class="stretch no_border_img" />
+</section>
+<section>
+    <img src="co-schema-sleep-3.png" class="stretch no_border_img" />
+</section>
+<section>
+    <img src="co-schema-sleep-4.png" class="stretch no_border_img" />
+</section>
+<section>
+    <img src="co-schema-sleep-5.png" class="stretch no_border_img" />
+</section>
+
 
 <section data-transition-speed="slow" data-transition="fade-in" >
 	<img src="coordinated-omission.png" class="stretch no_border_img" />
