--- a/index.html
+++ b/index.html
@@ -1092,36 +1092,36 @@ for (int i = 0; i < nbLoop; i++) {
 </section>
 
 <section>
-    <img src="schema-co-1.png" class="stretch no_border_img" />
+    <img src="schema-co-1.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
 <section>
-    <img src="schema-co-2.png" class="stretch no_border_img" />
+    <img src="schema-co-2.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
 <section>
-    <img src="schema-co-3.png" class="stretch no_border_img" />
+    <img src="schema-co-3.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
 <section>
-    <img src="schema-co-4.png" class="stretch no_border_img" />
+    <img src="schema-co-4.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
 <section>
-    <img src="schema-co-5.png" class="stretch no_border_img" />
+    <img src="schema-co-5.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
 	
 	
 <section>
-    <img src="co-schema-sleep-1.png" class="stretch no_border_img" />
+    <img src="co-schema-sleep-1.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
 <section>
-    <img src="co-schema-sleep-2.png" class="stretch no_border_img" />
+    <img src="co-schema-sleep-2.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
 <section>
-    <img src="co-schema-sleep-3.png" class="stretch no_border_img" />
+    <img src="co-schema-sleep-3.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
 <section>
-    <img src="co-schema-sleep-4.png" class="stretch no_border_img" />
+    <img src="co-schema-sleep-4.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
 <section>
-    <img src="co-schema-sleep-5.png" class="stretch no_border_img" />
+    <img src="co-schema-sleep-5.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
 
 
