--- a/index.html
+++ b/index.html
@@ -1091,37 +1091,37 @@ for (int i = 0; i < nbLoop; i++) {
 </aside>
 </section>
 
-<section>
+<section data-transition="fade-in">
     <img src="schema-co-1.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
-<section>
+<section data-transition="fade-in">
     <img src="schema-co-2.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
-<section>
+<section data-transition="fade-in">
     <img src="schema-co-3.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
-<section>
+<section data-transition="fade-in">
     <img src="schema-co-4.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
-<section>
+<section data-transition="fade-in">
     <img src="schema-co-5.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
 	
 	
-<section>
+<section data-transition="fade-in">
     <img src="co-schema-sleep-1.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
-<section>
+<section data-transition="fade-in">
     <img src="co-schema-sleep-2.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
-<section>
+<section data-transition="fade-in">
     <img src="co-schema-sleep-3.png" class="stretch no_border_img" data-transition="fade-in"/>
 </section>
-<section>
-    <img src="co-schema-sleep-4.png" class="stretch no_border_img" data-transition="fade-in"/>
+<section data-transition="fade-in">
+    <img src="co-schema-sleep-4.png" class="stretch no_border_img" />
 </section>
-<section>
-    <img src="co-schema-sleep-5.png" class="stretch no_border_img" data-transition="fade-in"/>
+<section data-transition="fade-in">
+    <img src="co-schema-sleep-5.png" class="stretch no_border_img" />
 </section>
 
 
