fix 404 on images on gh-pages

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				bottom: 0px;
 				width: 100%;
 				height: 49px;
-				background-image: url("../../bandeau_bas.png");
+				background-image: url("../../bandeaubas.png");
 				background-position: center top; }
 
 			.footer img {
@@ -155,7 +155,7 @@
 	</aside>
 </section>
 
-<section data-background="_Time_-_is_money_095207_.jpg">
+<section data-background="TimeIsMoney.jpg">
 	
 	<h3 style="background-color: black; color: red; font-weight: bold">Every 100ms of latency costs Amazon 1% of profit</h3>
 	
