remove from gh pages cache devoxx footer

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				bottom: 0px;
 				width: 100%;
 				height: 49px;
-				background-image: url("../../bandeaubas.png");
+				background-image: url("../../bandeaubas.png?nocache");
 				background-position: center top; }
 
 			.footer img {
